Apply suggestion from code review, remove Thread.sleep and not permit empty requests
Signed-off-by: Fabio Di Fabio <fabio.difabio@consensys.net>